--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 
     <section id="projects">
         <h2>Projects</h2>
-        <!-- Add your project details here -->
-        <div class="project">
+        <div class="project" onclick="toggleDescription('project1')">
             <h3>Project 1</h3>
-            <p>Description of Project 1.</p>
+            <p id="project1">Description of Project 1.</p>
         </div>
-        <div class="project">
+        <div class="project" onclick="toggleDescription('project2')">
             <h3>Project 2</h3>
-            <p>Description of Project 2.</p>
+            <p id="project2">Description of Project 2.</p>
         </div>
         <!-- Add more projects as needed -->
     </section>
@@ -33,12 +32,21 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
-        <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+        <form onsubmit="validateForm(event)">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <br>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <br>
+            <input type="submit" value="Submit">
+        </form>
     </section>
 
     <footer>
         <p>&copy; 2024 Your Name</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
