--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 										<li>Equipped with a strong understanding of business processes and improvements, consistently striving to provide data-driven solutions to challenging problems.</li>
 
 									</ul>
+									<h2>CERTIFICATIONS</h2>
+									<ul class="custom-ticks">
+										<li><a href="https://www.coursera.org/account/accomplishments/certificate/5TLG9YFSN9TP">Google Analytics Certified</a></li>
+										<li><a href="https://www.udemy.com/certificate/UC-30eb2452-919f-4b2f-8ac1-489c1129e1a7/">Word Press Certified</a></li>
+										<li><a href="https://www.coursera.org/account/accomplishments/certificate/QR3GSZ3DGUCU">Data-driven Decision Making
+											by PWC</a></li>
+
+										<li>Tableau 10 Essential Training by Tableau</li>
+										<li ><a href="https://www.coursera.org/account/accomplishments/verify/7D4MXH4MST6C">Mastering SQL Joins by Coursera Projects Networks</a></li>
+									</ul>
 								
 									<h2>PORTFOLIO</h2>
 									<h3>Sarcasm Detection using BERT</h3>								
