--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>SIKANDAR ALI PORTFOLIO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="SIKANDAR ALI" content="PORTFOLIO">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
