--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<header class="major">
 									<h2>WHO AM I?</h2>
 						
-									<p>Dynamic Data Analyst with 3+ years of experience in data management and business intelligence, specializing in driving data-powered decision-making to boost business development. Passionate about integrating analytical methodologies, statistical analysis, and data management practices to present actionable insights for critical business tasks.</p>
+									<p>Dynamic Data Analyst with 3+ years of experience in data management and business intelligence, specializing in data-driven decision-making to boost business development. Passionate about integrating analytical methodologies, statistical analysis, and data management practices to present actionable insights for critical business tasks.</p>
 								
 									<h2>Experience</h2>
 									<ul class="custom-ticks">
