--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 								<header class="major">
 									<h2>WHO AM I?</h2>
 						
-									<p>Dynamic Data Analyst with 3+ years of experience in data management and business intelligence, specializing in data-driven decision-making to boost business development. Passionate about integrating analytical methodologies, statistical analysis, and data management practices to present actionable insights for critical business tasks.</p>
+									<p>Data Analyst with extensive experience in data management and business intelligence, focusing on leveraging data-driven strategies to enhance business growth. Passionate about integrating analytical methodologies, statistical analysis, and data management practices to present actionable insights for critical business tasks.</p>
 								
 									<h2>Experience</h2>
 									<ul class="custom-ticks">
-										<li>3+ years of experience in Data Analysis encompassing Data Wrangling, Data Exploration, and Data Visualization.</li>
+										<li>Proficient in Data Wrangling, Data Exploration, and Data Visualization, covering a broad spectrum of data handling and analysis techniques.</li>
 										<li>Proficiency in Full Data Stack libraries including XGBoost, SciPy, Scikit-learn, NLTK, NumPy, and Pandas.</li>
 										<li>Worked for a variety of industry clients and have experience in sectors such as Logistics,Real Estate and E-commerce.</li>
 									</ul>
@@ -62,6 +62,7 @@
 									</ul>
 									<h2>CERTIFICATIONS</h2>
 									<ul class="custom-ticks">
+										<li><a href="https://certificates.mavenanalytics.io/56bef9c4-8378-4587-beca-c74fe0d20131">Excel Pivot Tables</a></li>
 										<li><a href="https://www.coursera.org/account/accomplishments/certificate/5TLG9YFSN9TP">Google Analytics Certified</a></li>
 										<li><a href="https://www.udemy.com/certificate/UC-30eb2452-919f-4b2f-8ac1-489c1129e1a7/">Word Press Certified</a></li>
 										<li><a href="https://www.coursera.org/account/accomplishments/certificate/QR3GSZ3DGUCU">Data-driven Decision Making
